--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
+APP_DEBUG=1
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=44a445631987a021f689d866a9f6b7db
@@ -27,7 +27,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+# DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/symfony6?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
